# musixporter

./: .gitignore  README.md  TODOS.md  monochrome_export.json  pyproject.toml  test.py
music_exporter/: interfaces.py  main.py
music_exporter/converters/: tidal_mapper.py
music_exporter/formatters/: monochrome.py
music_exporter/sources/: deezer.py
musixporter/: console.py  main.py
musixporter/converters/: tidal_mapper.py
musixporter/formatters/: monochrome.py
musixporter/sources/: deezer.py  factory.py  ytmusic.py
musixporter/tools/: tidal_search.py
