[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music_exporter"
version = "1.0.0"
description = "Modular music library exporter (Deezer to Monochrome)"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "browser-cookie3"
]

[project.scripts]
music-export = "music_exporter.main:main"