[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musixporter"
version = "1.0.0"
description = "Modular music library exporter"
requires-python = ">=3.8"

dependencies = [
    "requests",
    "browser-cookie3",
    "rich",
    "ytmusicapi"
]
    
[project.scripts]
musixporter = "musixporter.main:main"