[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musixporter"
version = "1.0.0"
description = "Modular music library exporter"
requires-python = ">=3.9"

dependencies = [
    "requests",
    "browser-cookie3",
    "rich",
    "deezer-python",
    "ytmusicapi",
    "limits>=3.13.0",
    "minim>=1.0.0",
]
    
[project.scripts]
musixporter = "musixporter.main:main"
